# FinSight

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 3173c5a8c195_initial_schema.py
backend/app/: main.py
backend/app/agent/: graph.py  tools.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  base.py  portfolio.py  position.py  snapshot.py  user.py
backend/app/routers/: __init__.py  agent.py  auth.py  portfolios.py  positions.py
backend/app/schemas/: __init__.py  auth.py  portfolio.py  position.py  user.py
backend/tests/: conftest.py  test_auth.py  test_portfolios.py  test_positions.py
frontend/: Dockerfile  nginx.conf  nginx.config  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: agent.ts  auth.ts  client.ts  portfolios.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
