[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-api"
version = "0.1.0"
description = "AI-powered portfolio analyst — FastAPI · LangGraph · PostgreSQL"
requires-python = ">=3.12"

dependencies = [
    # ── Web framework ──────────────────────────────────────────
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",

    # ── Base de datos ───────────────────────────────────────────
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.9",

    # ── Validación y configuración ──────────────────────────────
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    # ── Autenticación ───────────────────────────────────────────
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",

    # ── Caché y tareas asíncronas ───────────────────────────────
    "redis==5.0.8",
    "celery==5.4.0",

    # ── HTTP y datos financieros ────────────────────────────────
    "httpx==0.27.2",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # ── IA — versiones mínimas para evitar conflictos ──────────
    # Estas librerías se actualizan muy frecuentemente.
    # Usamos >= para que pip resuelva la combinación compatible.
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.20",
    "langgraph-checkpoint-postgres>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]